# tracklet_splitter

./: .gitignore  README.md  main.py  pyproject.toml
.claude/: settings.local.json
attributes/: attributes.py  teamclassifier.py
attributes/jersey_number/: centroid_reid_filter.py  jersey_number_predictor_parseq.py  legibility_classifier.py  pose_cropper.py
detect_and_track/: detect_and_track.py
detect_and_track/trackers/Deep_EIoU/: __init__.py  setup.py  tracker.py
detect_and_track/trackers/Deep_EIoU/core/: Deep_EIoU.py  __init__.py  matching.py
detect_and_track/trackers/Deep_EIoU/deep_eiou_tracker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
detect_and_track/trackers/Deep_EIoU/reid/: __init__.py  extractor.py
detect_and_track/trackers/Deep_EIoU/reid/torchreid/metrics/rank_cylib/: rank_cy.c  test_cython.py
detect_and_track/trackers/Deep_EIoU/reid/torchreid/utils/: feature_extractor.py
detect_and_track/trackers/Deep_EIoU/reid/torchreid/utils/GPU-Re-Ranking/: utils.py
detect_and_track/trackers/Deep_EIoU/utils/: __init__.py  conversions.py
tracklets/: split_tracklets.py  tracklet.py
tracklets/splitters/: jersey_splitter.py  team_splitter.py  trajectory_splitter.py
utils/: config.py  data_utils.py  visualization_utils.py
